--- a/People.html
+++ b/People.html
@@ -171,7 +171,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Ahn, Byeong Seok&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Ph.D. Student</p>
                                                 <p>11196abs(at)gmail.com<br>
-                                                Strong ground motions, Seismic source parameters</p>
+                                                Strong ground motions, Seismic source parameters, Site effects</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -198,7 +198,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Baek, June&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Ph.D. Student</p>
                                                 <p>100june6(at)gmail.com<br>
-                                                Crustal anisotropy and stress fields</p>
+                                                Crustal anisotropy and stress fields, Seismic discrimination, Machine learning</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -207,11 +207,26 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/donghyeopseol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Seol, DongHyeop&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
-                                                <p>M.S. Student</p>
-                                                <p>donghyeop0619(at)gmail.com<br>
-                                                Rupture directivity</p>
+                                                <img src="./images/people/mijikim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kim, Miji&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Ph.D. Student</p>
+                                                <p>miji61759(at)gmail.com<br>
+                                                Ill-conditioned earthquake relocation, Crustal structure<br>
+						Ph.D. Research Trainee at KIGAM</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Han, Sinae&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Ph.D. Student</p>
+                                                <p>ssinaehan(at)gmail.com<br>
+                                                Seismic hazard<br>
+						Senior Researcher at KEPCO E&C</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -225,7 +240,21 @@
                                                 <p>M.S. Student</p>
                                                 <p>15lhstar@gmail.com<br>
                                                 Seismo-acoustic analysis<br>
-						Currently, Research Trainee at Korea Institute of Geoscience and Mineral Resources</p>
+						M.S. Research Trainee at KIGAM</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Jeong, Haneul&nbsp&nbsp</p>
+                                                <p>B.S. Student</p>
+                                                <p>jeongsky3982@gmail.com<br>
+                                                Earthquake analysis<br>
+						-</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -262,8 +291,8 @@
                                             <li>
                                                 <img src="./images/people/satbyulkim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Satbyul&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
-                                                <p>Researcher Professor</p>
-                                                <p>Korea University</p>
+                                                <p>New Mexico, USA</p>
+                                                <p>Formerly, Researcher Professor at Korea University</p>
                                                 <p>Ph.D., Pukyong National University, 2020</p>
                                             </li>
                                         </ul>
@@ -290,9 +319,9 @@
                                                 <img src="./images/people/seongjujeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Jeong, SeongJu&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
                                                 <p>Postdoctoral Researcher</p>
-                                                <p>University of Toronto, Mississauga, Canada</p>
+                                                <p>University of Oklahoma, USA</p>
                                                 <p>M.S., Pukyong National University, 2013</p>
-                                                <p>Ph.D., Southern Methodist University, 2020</p>
+                                                <p>Ph.D., Southern Methodist University, USA, 2020</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -328,7 +357,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Song, Geun Young&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Officer</p>
-                                                <p>Pohang City</p>
+                                                <p>Formerly, Pohang City</p>
                                                 <p>Formerly, Researcher at Korea Meteorological Administration (KMA)</p>
                                             </li>
                                         </ul>
@@ -462,10 +491,8 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/mijikim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kim, Miji&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher</p>
-                                                <p>Korea Institute of Geoscience and Mineral Resources (KIGAM)<br>
+                                                <img src="./images/people/gohyejeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Go, Hyejeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                             </li>
                                         </ul>
                                     </section>
@@ -474,8 +501,8 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/gohyejeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Go, Hyejeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <img src="./images/people/donghyeopseol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Seol, DongHyeop&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                             </li>
                                         </ul>
                                     </section>
