--- a/People.html
+++ b/People.html
@@ -171,7 +171,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Ahn, Byeong Seok&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Ph.D. Student</p>
                                                 <p>11196abs(at)gmail.com<br>
-                                                Strong ground motions, Seismic source parameters, Site effects</p>
+                                                Strong ground-motion simulations, Earthquake source parameters, Site effects</p>
                                             </li>
                                         </ul>
                                     </section>
