--- a/People.html
+++ b/People.html
@@ -133,7 +133,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Park, Suhee&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Seismologist</p>
                                                 <p>suhee2308(at)gmail.com<br>
-                                                Automatic detection, association, and location of earthquakes</p>
+                                                Automatic detection, KSMMA array at Canada</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -184,7 +184,7 @@
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Minog&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Ph.D. Student</p>
                                                 <p>minog19(at)gmail.com<br>
-                                                Crustal structure from ray-traveltime forward modeling<br>
+                                                Crustal structure, Outer core<br>
 						Currently, visiting student at Australian National University</p>
                                             </li>
                                         </ul>
