--- a/Article.html
+++ b/Article.html
@@ -81,12 +81,12 @@
 											<h2>Article</h2>
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
-                                        <ul class="link-list last-child">
-                                            <li class="publication">Cho, H., Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S. (2025). Imaging the 3D basin structure of the Santa Clara Valley by ambient noise tomography. <i>Geosciences Journal</i>, <b>XXX</b>(XX), XXXX–XXXX. <a href="https://doi.org/10.1007/s12303-025-00005-8" target="_blank">doi:10.1007/s12303-025-00005-8</a> (Published on February 12, 2025)
-                                            </li>
-                                        </ul>
 					<ul class="link-list last-child">
                                             <li class="publication">Ahn, B.S., Kang, T.-S., Yoo, H.J. (2025). Source parameter estimation using site-corrected source spectra for the 2019 Ridgecrest earthquake sequence in Southern California. <i>Bulletin of the Seismological Society of America</i>, <b>XXX</b>(XX), XXXX–XXXX. <a href="https://doi.org/10.1785/0120240157" target="_blank">doi:10.1785/0120240157</a> (Available online on February 11, 2025)
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">Cho, H., Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S. (2025). Imaging the 3D basin structure of the Santa Clara Valley by ambient noise tomography. <i>Geosciences Journal</i>, <b>29</b>(1), 87–101. <a href="https://doi.org/10.1007/s12303-025-00005-8" target="_blank">doi:10.1007/s12303-025-00005-8</a> (Published on February 12, 2025)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
