--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -123,6 +123,7 @@
                                         2020-2026, Earthquake Disaster Investigation Committee, Ulsan Metropolitan City<br>
 					2019-2027, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety<br>
                                         2022-2028, Korea-China Basic Science Exchange Committee (13th, 14th), National Research Foundation of Korea<br>
+					2024-2026, Radioactive Waste Management Technical Committee, Korea Radioactive Waste Agency<br>
                                     </section>
                             </div>
                         </div>
