--- a/Conference.html
+++ b/Conference.html
@@ -83,6 +83,15 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="publication">
+                                                강태섭, 유현재 (2025). 판내부 지진환경에서 지진재해도 평가를 위한 다양한 정보 융합 모델. 2025년 춘계 지질과학기술 공동학술대회, 벡스코(BEXCO), 2025.04.02-04.
+                                            </li>
+                                            <li class="publication">
+                                                허다빈, 안병석, 강태섭, 이상준, 김성룡, 이준기, 김광희, 신동훈 (2025). 2024년 부안 연쇄 지진의 밀집 지진 관측을 이용한 지진원 분석. 2025년 춘계 지질과학기술 공동학술대회, 벡스코(BEXCO), 2025.04.02-04.
+                                            </li>
+                                            <li class="publication">
+                                                Kim, M., Lim, H., Kim, Y., Rhie, J., Kang, T.-S., Kim, K.-H., Ree, J.-H. (2025). In-depth seismic crustal structure of the southeastern Korean Peninsula from P receiver function analysis: Implications for crustal deformation since tbe backarc opening. 한국지구물리.물리탐사학회 2025 봄 학술대회 및 정기총회, 한국지질자원연구원, 2025.04.02-04.
+                                            </li>
+                                            <li class="publication">
                                                 Song, J.-H., Kim, S., Rhie, J., Kang, T.-S. (2024). Intraplate volcanism by spontaneous shallow upper mantle melt focusing. EGU General Assembly 2024, Vienna, Austria, 14–19 Apr 2024, EGU24-14365, https://doi.org/10.5194/egusphere-egu24-14365.
                                             </li>
                                             <li class="publication">
