--- a/People.html
+++ b/People.html
@@ -550,7 +550,7 @@
                                             <li>
                                                 <img src="./images/people/jinohjung.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Jung, Jin Oh&nbsp&nbsp<q style="font-size:12px">M.Ed.</q></p>
-                                                <p>Teacher</p>
+                                                <p>Teacher in Earth Science</p>
                                                 <p>Gimcheon High School</p>
                                             </li>
                                         </ul>
