--- a/People.html
+++ b/People.html
@@ -556,6 +556,78 @@
                                         </ul>
                                     </section>
                             </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Lee, Gyurim&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p>Researcher</p>
+                                                <p>Federation of Busan Science and Technology</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Lee, Hyun-A&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kang, Eun-Young&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p>Staff</p>
+                                                <p>Korea Institute of Geoscience and Mineral Resources</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Park, Gyeom-Deok&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p>Manager</p>
+                                                <p>Samyoung</p></p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                        </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Choi, Yujeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p>ProGamer in StarCraft</p>
+                                                <p>Team ECCA</p></p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                        </div>
+                        </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kim, Minjin&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p>Formerly, Researcher@Geophysics Lab</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
                         </div>
 		    </div>
 		</section>
