--- a/People.html
+++ b/People.html
@@ -561,7 +561,7 @@
                                         <ul class="people-list">
                                             <li>
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Lee, Gyurim&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p style="line-height:2em; font-size:1.1em">Lee, Gyurim&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
                                                 <p>Federation of Busan Science and Technology</p>
                                             </li>
