--- a/Article.html
+++ b/Article.html
@@ -82,15 +82,15 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
 					<ul class="link-list last-child">
-                                            <li class="publication">Ahn, B.S., Kang, T.-S., Yoo, H.J. (2025). Source parameter estimation using site-corrected source spectra for the 2019 Ridgecrest earthquake sequence in Southern California. <i>Bulletin of the Seismological Society of America</i>, <b>XXX</b>(XX), XXXX–XXXX. <a href="https://doi.org/10.1785/0120240157" target="_blank">doi:10.1785/0120240157</a> (Available online on February 11, 2025)
+                                            <li class="publication">Ahn, B.S., Kang, T.-S., Yoo, H.J. (2025). Source parameter estimation using site-corrected source spectra for the 2019 Ridgecrest earthquake sequence in Southern California. <i>Bulletin of the Seismological Society of America</i>, <b>115</b>(3), 927–946. <a href="https://doi.org/10.1785/0120240157" target="_blank">doi:10.1785/0120240157</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Cho, H., Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S. (2025). Imaging the 3D basin structure of the Santa Clara Valley by ambient noise tomography. <i>Geosciences Journal</i>, <b>29</b>(1), 87–101. <a href="https://doi.org/10.1007/s12303-025-00005-8" target="_blank">doi:10.1007/s12303-025-00005-8</a> (Published on February 12, 2025)
+                                            <li class="publication">Cho, H., Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S. (2025). Imaging the 3D basin structure of the Santa Clara Valley by ambient noise tomography. <i>Geosciences Journal</i>, <b>29</b>(1), 87–101. <a href="https://doi.org/10.1007/s12303-025-00005-8" target="_blank">doi:10.1007/s12303-025-00005-8</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Chang, C., Kang, T.-S., Heo, D. (2025). Identification of seismogenic fault network using earthquake focal mechanisms and stress constraints: A case of the 2016 Gyeongju earthquake sequence, South Korea. <i>Tectonophysics</i>, <b>897</b>:230613. <a href="https://doi.org/10.1016/j.tecto.2024.230613" target="_blank">doi:10.1016/j.tecto.2024.230613</a> (Published on February 20, 2025)
+                                            <li class="publication">Chang, C., Kang, T.-S., Heo, D. (2025). Identification of seismogenic fault network using earthquake focal mechanisms and stress constraints: A case of the 2016 Gyeongju earthquake sequence, South Korea. <i>Tectonophysics</i>, <b>897</b>:230613. <a href="https://doi.org/10.1016/j.tecto.2024.230613" target="_blank">doi:10.1016/j.tecto.2024.230613</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
