--- a/Article.html
+++ b/Article.html
@@ -81,7 +81,15 @@
 											<h2>Article</h2>
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
-					<ul class="link-list last-child">
+										<ul class="link-list last-child">
+                                            <li class="publication">Sohn, Y., Kim, K.-H., Kang, T.-S., Ahn, B.S., Heo, D., Jeon, H. (2025). Spatiotemporal variation in ambient seismic noise and its effect on the microearthquake monitoring capability of the Pohang Community Seismograph Network (PCSN), South Korea. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), 927–946. <a href="https://doi.org/10.1785/0120250107" target="_blank">doi:10.1785/0120240107</a> (online 29 October 2025; in press)
+                                            </li>
+                                        </ul>
+										<ul class="link-list last-child">
+                                            <li class="publication">Hong, T.-K., Lee, J., Kim, B., Park, S., Lee, J., Kim, D.G., Kang, T.-S. (2025). Lower‐crustal rupture of the 1952 Mw 6.3 suburban Pyongyang earthquake: insights into seismogenic reactivation in a paleocollision zone and seismic hazard potential. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), ****–****. <a href="https://doi.org/10.1785/0120250104" target="_blank">doi:10.1785/0120250104</a> (online 14 August 2025; in press)
+                                            </li>
+                                        </ul>
+										<ul class="link-list last-child">
                                             <li class="publication">Ahn, B.S., Kang, T.-S., Yoo, H.J. (2025). Source parameter estimation using site-corrected source spectra for the 2019 Ridgecrest earthquake sequence in Southern California. <i>Bulletin of the Seismological Society of America</i>, <b>115</b>(3), 927–946. <a href="https://doi.org/10.1785/0120240157" target="_blank">doi:10.1785/0120240157</a>
                                             </li>
                                         </ul>
