--- a/People.html
+++ b/People.html
@@ -99,19 +99,6 @@
                                     </section>
                             </div>
 -->
-                            <div class="col-6 col-12-medium"  style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/hyunjaeyoo.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Yoo, Hyun Jae&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
-                                                <p>Seismologist</p>
-                                                <p>yoonow(at)gmail.com<br>
-                                                Seismotectonics of Antarctica; Seismic hazard in the Korean Peninsula</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
                             <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
@@ -129,11 +116,50 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
+                                                <img src="./images/people/solhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Del Valle Rosales, Mauricio&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
+                                                <p>Seismologist</p>
+                                                <p>mau_dvr75(at)hotmail.com<br>
+                                                His Ph.D. thesis title will be shown here soon!</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Cho, Sungwon&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
+                                                <p>Seismologist</p>
+                                                <p>who(at)knows.his.email<br>
+                                                His Ph.D. thesis title will be shown here soon!</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
                                                 <img src="./images/people/ParkSuhee2025.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Park, Suhee&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Seismologist</p>
                                                 <p>suhee2308(at)gmail.com<br>
                                                 Automatic detection, KSMMA array at Canada</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/LeeHanByeol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Lee, Han Byeol&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Seismologist</p>
+                                                <p>15lhstar@gmail.com<br>
+                                                Seismo-acoustic analysis</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -227,20 +253,6 @@
                                                 <p>ssinaehan(at)gmail.com<br>
                                                 Seismic hazard<br>
 						Senior Researcher at KEPCO E&C</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/LeeHanByeol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Lee, Han Byeol&nbsp&nbsp</p>
-                                                <p>M.S. Student</p>
-                                                <p>15lhstar@gmail.com<br>
-                                                Seismo-acoustic analysis<br>
-						M.S. Research Trainee at KIGAM</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -453,19 +465,6 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Cho, Sungwon&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Ph.D. Student</p>
-                                                <p>Saint Louis University</p>
-                                                <p>M.S., Seoul National University, 2016</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
                                                 <img src="./images/people/gyeongdonchai.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Chai, Gyeongdon&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
@@ -621,6 +620,19 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Minjin&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>Formerly, Researcher@Geophysics Lab</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium"  style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/hyunjaeyoo.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Yoo, Hyun Jae&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
+                                                <p>Seismologist</p>
+                                                <p>yoonow(at)gmail.com<br>
+                                                Seismotectonics of Antarctica; Seismic hazard in the Korean Peninsula</p>
                                             </li>
                                         </ul>
                                     </section>
