--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -109,7 +109,7 @@
                                         2011-present, Editor, <a href="https://www.springer.com/journal/12303" target="_blank">Geosciences Journal</a><br>
                                         2011-2013, Board Member, The Earthquake Engineering Society of Korea<br>
                                         2011-2020, Board Member, The Korea Society of Earth and Exploration Geophysicists<br>
-                                        2014-2015/2020-2021, Board Member, The Geological Society of Korea<br>
+                                        2014-2015/2020-2021/2026-2027, Board Member, The Geological Society of Korea<br>
                                         2014-2016/2018-2021/2024-2025, Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
                                         2014-2016/2018-2022/2024-2025, Director, Institute of Environmental Geosciences, Pukyong National University<br>
                                         2014-2018, Advisory Board Member, Korea Meteorological Administration<br>
@@ -118,12 +118,13 @@
                                         2018-2021, Review Board, National Research Foundation of Korea<br>
                                         2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister<br>
                                         2020-2023, Earthquake Advisory Committee, Pohang City<br>
-					2019-2025, Earthquake Analysis Evaluation Committee, Korea Meteorological Administration<br>
+										2019-2025, Earthquake Analysis Evaluation Committee, Korea Meteorological Administration<br>
                                         2020-2025, Technical Standards Committee (5th, 6th), Korea Institute of Nuclear Safety<br>
                                         2020-2026, Earthquake Disaster Investigation Committee, Ulsan Metropolitan City<br>
-					2019-2027, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety<br>
+										2019-2027, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety<br>
                                         2022-2028, Korea-China Basic Science Exchange Committee (13th, 14th), National Research Foundation of Korea<br>
-					2024-2026, Radioactive Waste Management Technical Committee, Korea Radioactive Waste Agency<br>
+										2024-2026, Radioactive Waste Management Technical Committee, Korea Radioactive Waste Agency<br>
+										2025.09.24.-2027.09.23., Chair, Subcommittee on Seismology, The Geological Society of Korea<br>
                                     </section>
                             </div>
                         </div>
