--- a/People.html
+++ b/People.html
@@ -158,8 +158,21 @@
                                                 <img src="./images/people/LeeHanByeol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Lee, Han Byeol&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Seismologist</p>
-                                                <p>15lhstar@gmail.com<br>
+                                                <p>15lhstar(at)gmail.com<br>
                                                 Seismo-acoustic analysis</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/gibackkwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kwon, Ki Baek&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Seismologist</p>
+                                                <p>gibackk96(at)gmail.com<br>
+                                                Near-surface structure using seismic methods</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -264,7 +277,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Jeong, Haneul&nbsp&nbsp</p>
                                                 <p>B.S. Student</p>
-                                                <p>jeongsky3982@gmail.com<br>
+                                                <p>jeongsky3982(at)gmail.com<br>
                                                 Earthquake analysis<br>
 						-</p>
                                             </li>
@@ -527,18 +540,6 @@
                                                 <p style="line-height:2em; font-size:1.1em">Choi, Yujeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>Officer</p>
                                                 <p>Korean Prosecution Service</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/gibackkwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kwon, Ki Baek&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher</p>
-                                                <p>Korea Institute of Ocean Science and Technology (KIOST)</p>
                                             </li>
                                         </ul>
                                     </section>
