--- a/People.html
+++ b/People.html
@@ -132,7 +132,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Cho, Sungwon&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
                                                 <p>Seismologist</p>
-                                                <p>who(at)knows.his.email<br>
+                                                <p>scterm88(at)gmail.com <br>
                                                 His Ph.D. thesis title will be shown here soon!</p>
                                             </li>
                                         </ul>
