--- a/Article.html
+++ b/Article.html
@@ -82,11 +82,15 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
 										<ul class="link-list last-child">
-                                            <li class="publication">Sohn, Y., Kim, K.-H., Kang, T.-S., Ahn, B.S., Heo, D., Jeon, H. (2025). Spatiotemporal variation in ambient seismic noise and its effect on the microearthquake monitoring capability of the Pohang Community Seismograph Network (PCSN), South Korea. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), 927–946. <a href="https://doi.org/10.1785/0120250107" target="_blank">doi:10.1785/0120240107</a> (online 29 October 2025; in press)
+                                            <li class="publication">Sohn, Y., Kim, K.-H., Kang, T.-S., Ahn, B.S., Heo, D., Jeon, H. (2025). Spatiotemporal variation in ambient seismic noise and its effect on the microearthquake monitoring capability of the Pohang Community Seismograph Network (PCSN), South Korea. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), ***–***. <a href="https://doi.org/10.1785/0120250107" target="_blank">doi:10.1785/0120240107</a> (online 29 October 2025; in press)
                                             </li>
                                         </ul>
 										<ul class="link-list last-child">
-                                            <li class="publication">Hong, T.-K., Lee, J., Kim, B., Park, S., Lee, J., Kim, D.G., Kang, T.-S. (2025). Lower‐crustal rupture of the 1952 Mw 6.3 suburban Pyongyang earthquake: insights into seismogenic reactivation in a paleocollision zone and seismic hazard potential. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), ****–****. <a href="https://doi.org/10.1785/0120250104" target="_blank">doi:10.1785/0120250104</a> (online 14 August 2025; in press)
+                                            <li class="publication">Shrestha, S., Kang, T.-S. (2025). A boosting framework for slope unit-based earthquake-induced landslide susceptibility mapping. <i>Journal of Nepal Geological Society</i>, <b>69</b>, 33–40. <a href="https://doi.org/10.3126/jngs.v69i1.88314" target="_blank">doi:10.3126/jngs.v69i1.88314</a>
+                                            </li>
+                                        </ul>
+										<ul class="link-list last-child">
+                                            <li class="publication">Hong, T.-K., Lee, J., Kim, B., Park, S., Lee, J., Kim, D.G., Kang, T.-S. (2025). Lower‐crustal rupture of the 1952 Mw 6.3 suburban Pyongyang earthquake: insights into seismogenic reactivation in a paleocollision zone and seismic hazard potential. <i>Bulletin of the Seismological Society of America</i>, <b>115</b>(6), 2640–2656. <a href="https://doi.org/10.1785/0120250104" target="_blank">doi:10.1785/0120250104</a>
                                             </li>
                                         </ul>
 										<ul class="link-list last-child">
