--- a/Article.html
+++ b/Article.html
@@ -82,6 +82,10 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
 										<ul class="link-list last-child">
+                                            <li class="publication">Kim, M., Lim, H., Kim, Y., Rhie, J., Kang, T.-S., Kim, K.-H., Ree, J.-H. (2026). High-resolution P receiver function imaging of seismic crustal structure in the southeastern Korean Peninsula: Implications for deformation associated with Miocene backarc extension. <i>Geophysical Journal International</i>, <b>***</b>(*), ***–***. <a href="https://doi.org/10.1093/gji/ggag030" target="_blank">doi:10.1093/gji/ggag030</a> (accepted 20 January 2026)
+                                            </li>
+                                        </ul>
+										<ul class="link-list last-child">
                                             <li class="publication">Sohn, Y., Kim, K.-H., Kang, T.-S., Ahn, B.S., Heo, D., Jeon, H. (2025). Spatiotemporal variation in ambient seismic noise and its effect on the microearthquake monitoring capability of the Pohang Community Seismograph Network (PCSN), South Korea. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), ***–***. <a href="https://doi.org/10.1785/0120250107" target="_blank">doi:10.1785/0120240107</a> (online 29 October 2025; in press)
                                             </li>
                                         </ul>
