--- a/Article.html
+++ b/Article.html
@@ -86,7 +86,11 @@
                                             </li>
                                         </ul>
 										<ul class="link-list last-child">
-                                            <li class="publication">Sohn, Y., Kim, K.-H., Kang, T.-S., Ahn, B.S., Heo, D., Jeon, H. (2025). Spatiotemporal variation in ambient seismic noise and its effect on the microearthquake monitoring capability of the Pohang Community Seismograph Network (PCSN), South Korea. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), ***–***. <a href="https://doi.org/10.1785/0120250107" target="_blank">doi:10.1785/0120240107</a> (online 29 October 2025; in press)
+                                            <li class="publication">Baag, S.-Y., Rhie, J., Kim, S., Kang, T.-S., Cho, C.S. (2026). Seismic rupture parameters based on the source directivity analysis of the broadband teleseismic P-waves for deep earthquakes in the NW Japan subduction zone. <i>Geosciences Journal</i>, <b>***</b>(*), ***–***. <a href="https://doi.org/10.1007/s12303-***-*****-*" target="_blank">doi:10.1007/s12303-***-*****-*</a> (accepted 5 January 2026)
+                                            </li>
+                                        </ul>
+										<ul class="link-list last-child">
+                                            <li class="publication">Sohn, Y., Kim, K.-H., Kang, T.-S., Ahn, B.S., Heo, D., Jeon, H. (2026). Spatiotemporal variation in ambient seismic noise and its effect on the microearthquake monitoring capability of the Pohang Community Seismograph Network (PCSN), South Korea. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), ***–***. <a href="https://doi.org/10.1785/0120250107" target="_blank">doi:10.1785/0120240107</a> (online 29 October 2025; in press)
                                             </li>
                                         </ul>
 										<ul class="link-list last-child">
