--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -125,6 +125,7 @@
                                         2022-2028, Korea-China Basic Science Exchange Committee (13th, 14th), National Research Foundation of Korea<br>
 										2024-2026, Radioactive Waste Management Technical Committee, Korea Radioactive Waste Agency<br>
 										2025.09.24.-2027.09.23., Chair, Subcommittee on Seismology, The Geological Society of Korea<br>
+										2026.01.01.-2027.12.31., Vice President, The Geological Society of Korea<br>
                                     </section>
                             </div>
                         </div>
