--- a/Article.html
+++ b/Article.html
@@ -94,6 +94,10 @@
                                             </li>
                                         </ul>
 										<ul class="link-list last-child">
+                                            <li class="publication">강태섭 (2025). 한반도 지진재해도 평가 동향과 쟁점. 학문연구의 동향과 쟁점: 지질과학 (제15집, 제7장, pp. 253–287). 대한민국학술원.  ISSN 2234-4683
+											</li>
+                                        </ul>
+										<ul class="link-list last-child">
                                             <li class="publication">Shrestha, S., Kang, T.-S. (2025). A boosting framework for slope unit-based earthquake-induced landslide susceptibility mapping. <i>Journal of Nepal Geological Society</i>, <b>69</b>, 33–40. <a href="https://doi.org/10.3126/jngs.v69i1.88314" target="_blank">doi:10.3126/jngs.v69i1.88314</a>
                                             </li>
                                         </ul>
