--- a/Article.html
+++ b/Article.html
@@ -90,7 +90,7 @@
                                             </li>
                                         </ul>
 										<ul class="link-list last-child">
-                                            <li class="publication">Sohn, Y., Kim, K.-H., Kang, T.-S., Ahn, B.S., Heo, D., Jeon, H. (2026). Spatiotemporal variation in ambient seismic noise and its effect on the microearthquake monitoring capability of the Pohang Community Seismograph Network (PCSN), South Korea. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), ***–***. <a href="https://doi.org/10.1785/0120250107" target="_blank">doi:10.1785/0120240107</a> (online 29 October 2025; in press)
+                                            <li class="publication">Sohn, Y., Kim, K.-H., Kang, T.-S., Ahn, B.S., Heo, D., Jeon, H. (2026). Spatiotemporal variation in ambient seismic noise and its effect on the microearthquake monitoring capability of the Pohang Community Seismograph Network (PCSN), South Korea. <i>Bulletin of the Seismological Society of America</i>, <b>116</b>(1), 397–414. <a href="https://doi.org/10.1785/0120250107" target="_blank">doi:10.1785/0120240107</a>
                                             </li>
                                         </ul>
 										<ul class="link-list last-child">
