--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -114,6 +114,7 @@
                                         2014-2016/2018-2022/2024-2025, Director, Institute of Environmental Geosciences, Pukyong National University<br>
                                         2014-2018, Advisory Board Member, Korea Meteorological Administration<br>
                                         2016-2017, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of Public Safety and Security<br>
+                                        2016-present, National Correspondents of Korea (Republic of), International Association of Seismology and Physics of the Earth's Interior (IASPEI), International Union of Geodesy and Geophysics (IUGG)<br>
                                         2018-2021, Earthquake and Volcano Disaster Mitigation Policy Committee, Busan Metropolitan City<br>
                                         2018-2021, Review Board, National Research Foundation of Korea<br>
                                         2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister<br>
