--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -119,7 +119,7 @@
                                         2018-2021, Review Board, National Research Foundation of Korea<br>
                                         2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister<br>
                                         2020-2023, Earthquake Advisory Committee, Pohang City<br>
-										2019-2025, Earthquake Analysis Evaluation Committee, Korea Meteorological Administration<br>
+										2018.12.-2027.12., Earthquake Analysis Evaluation Committee, Korea Meteorological Administration<br>
                                         2020-2025, Technical Standards Committee (5th, 6th), Korea Institute of Nuclear Safety<br>
                                         2020-2026, Earthquake Disaster Investigation Committee, Ulsan Metropolitan City<br>
 										2019-2027, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety<br>
