--- a/Article.html
+++ b/Article.html
@@ -86,7 +86,7 @@
                                             </li>
                                         </ul>
 										<ul class="link-list last-child">
-                                            <li class="publication">Baag, S.-Y., Rhie, J., Kim, S., Kang, T.-S., Cho, C.S. (2026). Seismic rupture parameters based on the source directivity analysis of the broadband teleseismic P-waves for deep earthquakes in the NW Japan subduction zone. <i>Geosciences Journal</i>, <b>***</b>(*), ***–***. <a href="https://doi.org/10.1007/s12303-***-*****-*" target="_blank">doi:10.1007/s12303-***-*****-*</a> (accepted 5 January 2026)
+                                            <li class="publication">Baag, S.-Y., Rhie, J., Kim, S., Kang, T.-S., Cho, C.S. (2026). Seismic rupture parameters based on the source directivity analysis of the broadband teleseismic P-waves for deep earthquakes in the NW Japan subduction zone. <i>Geosciences Journal</i>, <b>***</b>(*), ***–***. <a href="https://doi.org/10.1007/s12303-026-00093-0" target="_blank">doi:10.1007/s12303-026-00093-0</a> (published online 19 February 2026)
                                             </li>
                                         </ul>
 										<ul class="link-list last-child">
